fix(waybar): tighten spacing

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -32,7 +32,7 @@
 
 #workspaces button {
   background-color: @bg2;
-  padding: 0 18px;
+  padding: 0 14px;
   color: @fg2;
 }
 
